load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "moira_macintosh",
    srcs = [
        "main.cc",
        "stubs.cc",
        "system.cc",
        "system.h",
        "config.h",
        "debug_log.h",
        "mac_errors.h",
        "keycodes.h",
        "devices/rom.cc",
        "devices/rom.h",
        "devices/via.cc",
        "devices/via.h",
        "devices/adb.cc",
        "devices/adb.h",
        "devices/iwm.cc",
        "devices/iwm.h",
        "devices/sony.cc",
        "devices/sony.h",
        "devices/rtc.cc",
        "devices/rtc.h",
        "devices/scsi.cc",
        "devices/scsi.h",
        "devices/scc.cc",
        "devices/scc.h",
        "devices/video.cc",
        "devices/video.h",
        "emulator.cc",
        "emulator.h",
        "platform/platform.h",
        "platform/common_platform.cc",
        "platform/common_platform.h",
        "platform/x11_platform_base.cc",
        "platform/x11_platform_base.h",
        "platform/x11_platform_new.cc",
        "platform/x11_platform_new.h",
        "platform/x11_platform_creation.h",
        "cpu/moira_cpu.cc",
        "cpu/moira_cpu.h",
    ],
    copts = [
        "-std=c++20",
        "-fpermissive",
        "-I.",
        "-Isrc",
        "-fno-asynchronous-unwind-tables",
        "-Wa,--gsframe=no",
        "-Os",
    ],
    deps = [
        "//:moira",
    ],
    linkopts = [
        "-lpthread",
        "-lX11",
    ],
)
